src/test/deca/context/valid/affectNull.deca
class A {

}
{
    A a = null;
    a = new A();
}