src/test/deca/context/invalid/type_inexistant.deca
//ERROR :3:
{
     integer a = 3;
}
